Fix type for variable list used by config